removed old video from read me and fixed the header layout on small screens

--- a/styles.css
+++ b/styles.css
@@ -435,7 +435,7 @@ Web Fist Layout
  
 
 /*=============================
-Media query for small scre3ens
+Media query for small screens
 =============================*/
 
 
@@ -453,21 +453,21 @@ Media query for small scre3ens
 
 @media (max-width: 640px) {
   .DP {
-    width: 6em;
-    height: 6em;
+    width: 96px;
+    height: 96px;
     border-radius: 24px;
     object-fit: fill;
-    margin-right: 0.5em;
+    margin-right: 0.2em;
     
 }
 .contain {
-  width: 12em;
+  width: 15em;
   height: 96px;
   border-radius: 24px;
   background-color: white;
   line-height: 12px;
-  padding: 10px
-  
+  padding: 10px;
+  margin-left: 8px;
 }
 
 .contain>p {
@@ -484,7 +484,7 @@ h1 {
   margin-top: 0%;
 }
 .resume-header {
-    width: 19.9em;
+    width: 23em;
     height: 8.5em;
     font-size: 14px;
     color: #4A4A4A;
